# agg-rs

./: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml  rustfmt.toml
.github/: build.yml
.github/workflows/: build.yml  coverage.yml
docs/: COVERAGE.md
scripts/: coverage.sh
src/: alphamask.rs  base.rs  buffer.rs  cell.rs  clip.rs  color.rs  color_value.rs  gallery.rs  lib.rs  line_interp.rs  math.rs  outline.rs  outline_aa.rs  paths.rs  pixfmt.rs  ppm.rs  raster.rs  render.rs  scan.rs  stroke.rs  text.rs  transform.rs
src/basic/: mod.rs  text.rs
src/color/: color_value.rs  mod.rs  rgb.rs  traits.rs
src/interpolators/: aa.rs  distance_interp.rs  line_interp.rs  line_params.rs  mod.rs
src/pixels/: alpha_blend.rs  alpha_mask.rs  blend_pix.rs  buffer.rs  cover.rs  mod.rs  pixel.rs  pixfmt.rs
src/pixfmt/: _pixfmt.rs  alpha_blend.rs  blend_pix.rs  buffer.rs  cover.rs  mod.rs  pixel.rs  pixfmt.rs
src/rasters/: cell.rs  mod.rs  outline.rs  outline_aa.rs  scanline.rs
src/renders/: base.rs  gradient.rs  line_interp.rs  (+4 more)
tests/: aa_repro.rs  aa_test.rs  assets.rs  component_rendering.rs  lion.rs  lion_cw.rs  lion_cw_aa.rs  lion_cw_aa_srgba.rs  lion_outline.rs  lion_outline_width1.rs  lion_png.rs  outline.rs  outline_aa.rs  rasterizers.rs  rasterizers2.rs  rasterizers2_pre.rs  rounded_rect.rs  t00_example.rs  t01_rendering_buffer.rs  t02_pixel_formats.rs  t03_solar_spectrum.rs  t04_solar_spectrum_alpha.rs  t05_solar_spectrum_alpha.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t21_line_join.rs  t22_inner_join.rs  t23_font.rs  test_tutorials.rs
(+33 files in other folders)
