[package]
name = "agg"
version = "0.1.1"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2021"
repository = "https://github.com/savge13/agg"
documentation = "https://docs.rs/agg"
homepage = "https://github.com/savage13/agg"
license = "BSD-2-Clause"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"

[dependencies]
freetype-rs = { version = "0.38.0", features = ["bundled"] }
image = { version = "0.25.8", default-features = false, features = ["png", "gif", "jpeg", "bmp", "tga"] }
palette = "0.7.6"
