[package]
name = "agg"
version = "0.1.1"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2024"
repository = "https://github.com/savge13/agg"
documentation = "https://docs.rs/agg"
homepage = "https://github.com/savage13/agg"
license = "BSD-2-Clause"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"

[dependencies]
freetype-rs = { version = "0.38.0", features = ["bundled"] }
image = { version = "0.25.8", default-features = false, features = ["png", "gif", "jpeg", "bmp", "tga"] }
log = "0.4.28"
palette = "0.7.6"

[dev-dependencies]
flexi_logger = "0.31.2"
